@@ -164,6 +164,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #16713: Fix the parsing of tel url with params using urlparse module.
+
 - Issue #16443: Add docstrings to regular expression match objects.
   Patch by Anton Kasyanov.
 
